welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: not found: value CaseOrange
      	caseOrange=CaseOrange+1 ;
                   ^